--- a/example-simple.htm
+++ b/example-simple.htm
@@ -31,14 +31,16 @@ require([
                 { label: 'Turdus', layer: 3 },
                 { label: 'Corvus', layer: 1 },
                 { label: 'Falco', layer: 1 },
-                { label: 'Cathartes', layer: 2 }
+                { label: 'Cathartes', layer: 2 },
+                { label: 'Parus', layer: 0 }
             ],
             adjList: [
                 [2,3,4],
                 [],
                 [1],
                 [],
-                []
+                [],
+                [2]
             ]
         };
 
