added complex graph example

--- a/example-komplex.htm
+++ b/example-komplex.htm
@@ -3,6 +3,12 @@
 <head>
 <title>Layered DirectedGraph</title>
 <link href="graph/resources/dgraph.css" type="text/css" rel="stylesheet">
+<style type="text/css">
+#graphCanvas {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 11px;
+}
+</style>
 </head>
 
 <body class="dgraph">
@@ -23,7 +29,103 @@ require([
     'dojo/domReady!'
 ], function(DirectedGraphLayout, SvgRenderer) {
     var graph, svg,
-        graphData = {"numLayer":10,"maxPerLayer":4,"nodeList":[{"label":"LBMWNWENT [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBAUFN","col":"LBMWNWENT"},"selected":false},{"label":"LBPFZLAGE [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBAUFN","col":"LBPFZLAGE"},"selected":false},{"label":"LBWNWENT [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBAUFN","col":"LBWNWENT"},"selected":false},{"label":"LBWNWENT [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBAUFN_V100","col":"LBWNWENT"},"selected":false},{"label":"LBWNWENT [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBAUFN_V210","col":"LBWNWENT"},"selected":false},{"label":"KRONHOE [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBRAST","col":"KRONHOE"},"selected":false},{"label":"LBBODBED [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBRAST","col":"LBBODBED"},"selected":false},{"label":"LBRASTLAGE [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBRAST","col":"LBRASTLAGE"},"selected":false},{"label":"LBWALDISTYP [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBWALDISLIN","col":"LBWALDISTYP"},"selected":false},{"label":"LEN [LBI]","layer":0,"isRaw":true,"id":{"owner":"LBI","table":"LBWALDISLIN","col":"LEN"},"selected":false},{"label":"MANWNWENT [LFA]","layer":0,"isRaw":true,"id":{"owner":"LFA","table":"HITAMWNWENT","col":"MANWNWENT"},"selected":false},{"label":"BESTSTAB [LFI]","layer":0,"isRaw":true,"id":{"owner":"LFI","table":"WA","col":"BESTSTAB"},"selected":false},{"label":"WNWENT [LFI]","layer":0,"isRaw":true,"id":{"owner":"LFI","table":"WA","col":"WNWENT"},"selected":false},{"label":"WTYP [LFI]","layer":0,"isRaw":true,"id":{"owner":"LFI","table":"WA","col":"WTYP"},"selected":false},{"label":"ZUGANG [LFI]","layer":0,"isRaw":true,"id":{"owner":"LFI","table":"WA","col":"ZUGANG"},"selected":false},{"label":"WTYP [150]","layer":1,"isRaw":false,"id":{"invNr":150,"varNr":16},"selected":false},{"label":"KOMBWALDENT [150]","layer":3,"isRaw":false,"id":{"invNr":150,"varNr":329},"selected":false},{"label":"WNWENT [150]","layer":2,"isRaw":false,"id":{"invNr":150,"varNr":82},"selected":false},{"label":"LBWNWENT [150]","layer":1,"isRaw":false,"id":{"invNr":150,"varNr":87},"selected":false},{"label":"KOMBWALDENT [250]","layer":4,"isRaw":false,"id":{"invNr":250,"varNr":329},"selected":false},{"label":"WNWENT [250]","layer":1,"isRaw":false,"id":{"invNr":250,"varNr":82},"selected":false},{"label":"LBWNWENT [250]","layer":1,"isRaw":false,"id":{"invNr":250,"varNr":87},"selected":false},{"label":"KOMBWALDENT [350]","layer":5,"isRaw":false,"id":{"invNr":350,"varNr":329},"selected":false},{"label":"DGRAD25 [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":368},"selected":false},{"label":"WBREITESOLL [350]","layer":2,"isRaw":false,"id":{"invNr":350,"varNr":373},"selected":false},{"label":"WBREITE [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":374},"selected":false},{"label":"LBMWNWENT [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":390},"selected":false},{"label":"WABST [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":391},"selected":false},{"label":"LBPFZLAGE [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":393},"selected":false},{"label":"KRONHOE [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":414},"selected":false},{"label":"LBBODBED [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":417},"selected":false},{"label":"LBRASTLAGE [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":420},"selected":false},{"label":"ZWALD [350]","layer":6,"isRaw":false,"id":{"invNr":350,"varNr":434},"selected":false},{"label":"LBWNWENTKNOSSOS [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":482},"selected":false},{"label":"BESTSTAB [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":558},"selected":false},{"label":"ZUGANG [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":81},"selected":false},{"label":"WNWENT [350]","layer":1,"isRaw":false,"id":{"invNr":350,"varNr":82},"selected":false},{"label":"LBWNWENT [350]","layer":3,"isRaw":false,"id":{"invNr":350,"varNr":87},"selected":false},{"label":"BESTSTABVOR [452]","layer":9,"isRaw":false,"id":{"invNr":452,"varNr":1261},"selected":true},{"label":"ZGWALD34 [452]","layer":8,"isRaw":false,"id":{"invNr":452,"varNr":1429},"selected":false},{"label":"KOMBWALDENT [452]","layer":6,"isRaw":false,"id":{"invNr":452,"varNr":329},"selected":false},{"label":"ZWALD [452]","layer":7,"isRaw":false,"id":{"invNr":452,"varNr":434},"selected":false},{"label":"ZUGANG [452]","layer":1,"isRaw":false,"id":{"invNr":452,"varNr":81},"selected":false},{"label":"WNWENT [452]","layer":1,"isRaw":false,"id":{"invNr":452,"varNr":82},"selected":false},{"label":"LBWNWENT [452]","layer":1,"isRaw":false,"id":{"invNr":452,"varNr":87},"selected":false}],"adjList":[[26],[28],[33,37,44],[18],[21],[23,29],[23,30],[23,31],[25,27],[25,27],[22],[34],[17,20,36,43],[15],[35,42],[17],[19],[16],[16],[22],[19],[19],[32,40],[24,37],[37],[37],[37],[37],[37],[37],[37],[37],[39],[37],[38],[32],[22],[22],[],[38],[41],[39],[41],[40],[40]]};
+            graphData = {"numLayer": 10, "maxPerLayer": 3, "nodeList": [
+                {"label": "LBMWNWENT", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBAUFN", "col": "LBMWNWENT"}},
+                {"label": "LBPFZLAGE", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBAUFN", "col": "LBPFZLAGE"}},
+                {"label": "LBWNWENT", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBAUFN", "col": "LBWNWENT"}},
+                {"label": "KRONHOE", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBRAST", "col": "KRONHOE"}},
+                {"label": "LBBODBED", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBRAST", "col": "LBBODBED"}},
+                {"label": "LBRASTLAGE", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBRAST", "col": "LBRASTLAGE"}},
+                {"label": "LBWALDISTYP", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBWALDISLIN", "col": "LBWALDISTYP"}},
+                {"label": "LEN", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBWALDISLIN", "col": "LEN"}},
+                {"label": "ASCH2 [LFAGEO]", "layer": 0, "isRaw": true, "id": {"owner": "LFAGEO", "table": "WALDASCH8597", "col": "ASCH2"}},
+                {"label": "BART [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "BART"}},
+                {"label": "BHD [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "BHD"}},
+                {"label": "BSTAT [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "BSTAT"}},
+                {"label": "SCHICHT [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "SCHICHT"}},
+                {"label": "UMFANG [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "UMFANG"}},
+                {"label": "EST [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "WA", "col": "EST"}},
+                {"label": "WNWENT [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "WA", "col": "WNWENT"}},
+                {"label": "ZUGANG [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "WA", "col": "ZUGANG"}},
+                {"label": "ASCH2 [0]", "layer": 1, "isRaw": false, "id": {"invNr": 0, "varNr": 1234}},
+                {"label": "UMFANG [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 10}},
+                {"label": "BWARTENKLA4 [18451]", "layer": 9, "isRaw": false, "id": {"invNr": 18451, "varNr": 1295}},
+                {"label": "IPOPBAUM [18451]", "layer": 3, "isRaw": false, "id": {"invNr": 18451, "varNr": 1444}},
+                {"label": "IPOPBART [18451]", "layer": 4, "isRaw": false, "id": {"invNr": 18451, "varNr": 1445}},
+                {"label": "EST [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 20}},
+                {"label": "KOMBWALDENT [18451]", "layer": 5, "isRaw": false, "id": {"invNr": 18451, "varNr": 329}},
+                {"label": "BART [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 4}},
+                {"label": "SCHICHT [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 43}},
+                {"label": "ZWALD [18451]", "layer": 6, "isRaw": false, "id": {"invNr": 18451, "varNr": 434}},
+                {"label": "BSTAT [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 47}},
+                {"label": "BWARTEN [18451]", "layer": 8, "isRaw": false, "id": {"invNr": 18451, "varNr": 737}, "selected": true},
+                {"label": "SART [18451]", "layer": 7, "isRaw": false, "id": {"invNr": 18451, "varNr": 738}},
+                {"label": "EART [18451]", "layer": 7, "isRaw": false, "id": {"invNr": 18451, "varNr": 739}},
+                {"label": "ZUGANG [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 81}},
+                {"label": "WNWENT [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 82}},
+                {"label": "LBWNWENT [18451]", "layer": 4, "isRaw": false, "id": {"invNr": 18451, "varNr": 87}},
+                {"label": "BHD [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 9}},
+                {"label": "D13 [18451]", "layer": 2, "isRaw": false, "id": {"invNr": 18451, "varNr": 95}},
+                {"label": "DGRAD25 [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 368}},
+                {"label": "WBREITESOLL [350]", "layer": 2, "isRaw": false, "id": {"invNr": 350, "varNr": 373}},
+                {"label": "WBREITE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 374}},
+                {"label": "LBMWNWENT [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 390}},
+                {"label": "WABST [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 391}},
+                {"label": "LBPFZLAGE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 393}},
+                {"label": "KRONHOE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 414}},
+                {"label": "LBBODBED [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 417}},
+                {"label": "LBRASTLAGE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 420}},
+                {"label": "LBWNWENTKNOSSOS [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 482}},
+                {"label": "LBWNWENT [350]", "layer": 3, "isRaw": false, "id": {"invNr": 350, "varNr": 87}}
+            ], "adjList": [
+                [39],
+                [41],
+                [33, 45, 46],
+                [36, 42],
+                [36, 43],
+                [36, 44],
+                [38, 40],
+                [38, 40],
+                [17],
+                [24],
+                [34],
+                [27],
+                [25],
+                [18],
+                [22],
+                [32],
+                [31],
+                [23],
+                [35],
+                [],
+                [21, 28, 29],
+                [28],
+                [28],
+                [26],
+                [21, 29, 30],
+                [28, 29, 30],
+                [28, 29, 30],
+                [20, 30],
+                [19],
+                [28],
+                [28],
+                [26],
+                [23],
+                [23],
+                [35],
+                [20],
+                [37, 46],
+                [46],
+                [46],
+                [46],
+                [46],
+                [46],
+                [46],
+                [46],
+                [46],
+                [46],
+                [33]
+            ]}
 
     graph = new DirectedGraphLayout({
         numLayer: graphData.numLayer
