--- a/example-simple.htm
+++ b/example-simple.htm
@@ -3,6 +3,12 @@
 <head>
 <title>Layered DirectedGraph</title>
 <link href="graph/resources/dgraph.css" type="text/css" rel="stylesheet">
+<style type="text/css">
+#graphCanvas {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 11px;
+}
+</style>
 </head>
 
 <body class="dgraph">
