--- a/example-komplex.htm
+++ b/example-komplex.htm
@@ -27,105 +27,105 @@ require([
 	'graph/DirectedGraphLayout',
 	'graph/SvgRenderer',
     'dojo/domReady!'
-], function(DirectedGraphLayout, SvgRenderer) {
+], function (DirectedGraphLayout, SvgRenderer) {
     var graph, svg,
-            graphData = {"numLayer": 10, "maxPerLayer": 3, "nodeList": [
-                {"label": "LBMWNWENT", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBAUFN", "col": "LBMWNWENT"}},
-                {"label": "LBPFZLAGE", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBAUFN", "col": "LBPFZLAGE"}},
-                {"label": "LBWNWENT", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBAUFN", "col": "LBWNWENT"}},
-                {"label": "KRONHOE", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBRAST", "col": "KRONHOE"}},
-                {"label": "LBBODBED", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBRAST", "col": "LBBODBED"}},
-                {"label": "LBRASTLAGE", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBRAST", "col": "LBRASTLAGE"}},
-                {"label": "LBWALDISTYP", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBWALDISLIN", "col": "LBWALDISTYP"}},
-                {"label": "LEN", "layer": 0, "isRaw": true, "id": {"owner": "LBI", "table": "LBWALDISLIN", "col": "LEN"}},
-                {"label": "ASCH2 [LFAGEO]", "layer": 0, "isRaw": true, "id": {"owner": "LFAGEO", "table": "WALDASCH8597", "col": "ASCH2"}},
-                {"label": "BART [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "BART"}},
-                {"label": "BHD [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "BHD"}},
-                {"label": "BSTAT [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "BSTAT"}},
-                {"label": "SCHICHT [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "SCHICHT"}},
-                {"label": "UMFANG [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "BA", "col": "UMFANG"}},
-                {"label": "EST [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "WA", "col": "EST"}},
-                {"label": "WNWENT [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "WA", "col": "WNWENT"}},
-                {"label": "ZUGANG [LFI]", "layer": 0, "isRaw": true, "id": {"owner": "LFI", "table": "WA", "col": "ZUGANG"}},
-                {"label": "ASCH2 [0]", "layer": 1, "isRaw": false, "id": {"invNr": 0, "varNr": 1234}},
-                {"label": "UMFANG [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 10}},
-                {"label": "BWARTENKLA4 [18451]", "layer": 9, "isRaw": false, "id": {"invNr": 18451, "varNr": 1295}},
-                {"label": "IPOPBAUM [18451]", "layer": 3, "isRaw": false, "id": {"invNr": 18451, "varNr": 1444}},
-                {"label": "IPOPBART [18451]", "layer": 4, "isRaw": false, "id": {"invNr": 18451, "varNr": 1445}},
-                {"label": "EST [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 20}},
-                {"label": "KOMBWALDENT [18451]", "layer": 5, "isRaw": false, "id": {"invNr": 18451, "varNr": 329}},
-                {"label": "BART [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 4}},
-                {"label": "SCHICHT [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 43}},
-                {"label": "ZWALD [18451]", "layer": 6, "isRaw": false, "id": {"invNr": 18451, "varNr": 434}},
-                {"label": "BSTAT [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 47}},
-                {"label": "BWARTEN [18451]", "layer": 8, "isRaw": false, "id": {"invNr": 18451, "varNr": 737}, "selected": true},
-                {"label": "SART [18451]", "layer": 7, "isRaw": false, "id": {"invNr": 18451, "varNr": 738}},
-                {"label": "EART [18451]", "layer": 7, "isRaw": false, "id": {"invNr": 18451, "varNr": 739}},
-                {"label": "ZUGANG [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 81}},
-                {"label": "WNWENT [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 82}},
-                {"label": "LBWNWENT [18451]", "layer": 4, "isRaw": false, "id": {"invNr": 18451, "varNr": 87}},
-                {"label": "BHD [18451]", "layer": 1, "isRaw": false, "id": {"invNr": 18451, "varNr": 9}},
-                {"label": "D13 [18451]", "layer": 2, "isRaw": false, "id": {"invNr": 18451, "varNr": 95}},
-                {"label": "DGRAD25 [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 368}},
-                {"label": "WBREITESOLL [350]", "layer": 2, "isRaw": false, "id": {"invNr": 350, "varNr": 373}},
-                {"label": "WBREITE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 374}},
-                {"label": "LBMWNWENT [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 390}},
-                {"label": "WABST [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 391}},
-                {"label": "LBPFZLAGE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 393}},
-                {"label": "KRONHOE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 414}},
-                {"label": "LBBODBED [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 417}},
-                {"label": "LBRASTLAGE [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 420}},
-                {"label": "LBWNWENTKNOSSOS [350]", "layer": 1, "isRaw": false, "id": {"invNr": 350, "varNr": 482}},
-                {"label": "LBWNWENT [350]", "layer": 3, "isRaw": false, "id": {"invNr": 350, "varNr": 87}}
-            ], "adjList": [
-                [39],
-                [41],
-                [33, 45, 46],
-                [36, 42],
-                [36, 43],
-                [36, 44],
-                [38, 40],
-                [38, 40],
-                [17],
-                [24],
-                [34],
-                [27],
-                [25],
-                [18],
-                [22],
-                [32],
-                [31],
-                [23],
-                [35],
-                [],
-                [21, 28, 29],
-                [28],
-                [28],
-                [26],
-                [21, 29, 30],
-                [28, 29, 30],
-                [28, 29, 30],
-                [20, 30],
-                [19],
-                [28],
-                [28],
-                [26],
-                [23],
-                [23],
-                [35],
-                [20],
-                [37, 46],
-                [46],
-                [46],
-                [46],
-                [46],
-                [46],
-                [46],
-                [46],
-                [46],
-                [46],
-                [33]
-            ]}
+        graphData = { numLayer: 10, maxPerLayer: 3, nodeList: [
+            { label: 'Turdus',  layer: 0},
+            { label: 'Parus',  layer: 0},
+            { label: 'Falco',  layer: 0},
+            { label: 'Rubecula',  layer: 0},
+            { label: 'Corvus',  layer: 0},
+            { label: 'Sturnus',  layer: 0},
+            { label: 'Mycteria',  layer: 0},
+            { label: 'Ciconia',  layer: 0},
+            { label: 'Cygnus',  layer: 0},
+            { label: 'Cathartes',  layer: 0},
+            { label: 'Anas',  layer: 0},
+            { label: 'Atticora',  layer: 0},
+            { label: 'Hirundo',  layer: 0},
+            { label: 'Jabiru',  layer: 0},
+            { label: 'Ara',  layer: 0},
+            { label: 'Fringilla',  layer: 0},
+            { label: 'ZUGANG',  layer: 0},
+            { label: 'Tigrisoma',  layer: 1},
+            { label: 'UMFANG',  layer: 1},
+            { label: 'Harpia',  layer: 9},
+            { label: 'Rynchops',  layer: 3},
+            { label: 'Larus',  layer: 4},
+            { label: 'Troglodytes',  layer: 1},
+            { label: 'Anthracothorax',  layer: 5},
+            { label: 'Pandion',  layer: 1},
+            { label: 'Egretta',  layer: 1},
+            { label: 'Thryothorus',  layer: 6},
+            { label: 'Ciconia',  layer: 1},
+            { label: 'Athene',  layer: 8},
+            { label: 'Anhinga',  layer: 7},
+            { label: 'Philomachus',  layer: 7},
+            { label: 'Tetrao',  layer: 1},
+            { label: 'Podiceps',  layer: 1},
+            { label: 'Poecile',  layer: 4},
+            { label: 'Asio',  layer: 1},
+            { label: 'Strix',  layer: 2},
+            { label: 'Hippophaë',  layer: 1},
+            { label: 'Silvia',  layer: 2},
+            { label: 'Columba',  layer: 1},
+            { label: 'Lanius',  layer: 1},
+            { label: 'Merganser',  layer: 1},
+            { label: 'Anser',  layer: 1},
+            { label: 'Eudocimus',  layer: 1},
+            { label: 'Catoptrophorus',  layer: 1},
+            { label: 'Pluvialis',  layer: 1},
+            { label: 'Aythya',  layer: 1},
+            { label: 'Cinclus',  layer: 3}
+        ], adjList: [
+            [39],
+            [41],
+            [33, 45, 46],
+            [36, 42],
+            [36, 43],
+            [36, 44],
+            [38, 40],
+            [38, 40],
+            [17],
+            [24],
+            [34],
+            [27],
+            [25],
+            [18],
+            [22],
+            [32],
+            [31],
+            [23],
+            [35],
+            [],
+            [21, 28, 29],
+            [28],
+            [28],
+            [26],
+            [21, 29, 30],
+            [28, 29, 30],
+            [28, 29, 30],
+            [20, 30],
+            [19],
+            [28],
+            [28],
+            [26],
+            [23],
+            [23],
+            [35],
+            [20],
+            [37, 46],
+            [46],
+            [46],
+            [46],
+            [46],
+            [46],
+            [46],
+            [46],
+            [46],
+            [46],
+            [33]
+        ]};
 
     graph = new DirectedGraphLayout({
         numLayer: graphData.numLayer
