added some config options

--- a/example-complex.htm
+++ b/example-complex.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de" dir="ltr">
 <head>
-<title>Layered DirectedGraph</title>
+<title>Example of a complex Layered DirectedGraph</title>
 <link href="graph/resources/dgraph.css" type="text/css" rel="stylesheet">
 <style type="text/css">
 #graphCanvas {
@@ -139,13 +139,7 @@ require([
         renderGrid: false
     });
 
-    graph.initNodeList(graphData.nodeList);
-    graph.addEdges(graphData.nodeList, graphData.adjList);
-    graph.expandNodeList();
-    graph.minimizeCrossings(20);
-    graph.compact();
-    graph.setLayoutPosition();
-
+    graph.render(graphData);
     svg.render(graph);
 });
 </script>
