improved and completed jsdoc

--- a/example-simple.htm
+++ b/example-simple.htm
@@ -21,7 +21,7 @@ var dojoConfig = {
 	]
 };
 </script>
-<script type="text/javascript" src="/dojo/1.9.1/dojo/dojo.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script>
 <script type="text/javascript">
 require([
 	'graph/DirectedGraphLayout',
