--- a/example-complex.htm
+++ b/example-complex.htm
@@ -17,15 +17,15 @@
 var dojoConfig = {
 	async: true,
 	packages: [
-		{name: 'graph', location: '/graph'}
+		{name: 'dgraph', location: '/library/dgraph/graph'}
 	]
 };
 </script>
-<script type="text/javascript" src="/dojo/1.9.1/dojo/dojo.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script>
 <script type="text/javascript">
 require([
-	'graph/DirectedGraphLayout',
-	'graph/SvgRenderer',
+	'dgraph/DirectedGraphLayout',
+	'dgraph/SvgRenderer',
     'dojo/domReady!'
 ], function (DirectedGraphLayout, SvgRenderer) {
     var graph, svg,
@@ -136,7 +136,7 @@ require([
             meshWidth: 84,
             meshHeight: 66
         },
-        renderGrid: false
+//        renderGrid: false
     });
 
     graph.render(graphData);
