--- a/example-simple.htm
+++ b/example-simple.htm
@@ -17,16 +17,16 @@
 var dojoConfig = {
 	async: true,
 	packages: [
-		{name: 'graph', location: '/graph'}
+		{name: 'dgraph', location: '/graph'}
 	]
 };
 </script>
-<script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/dojo/1.14.1/dojo/dojo.js"></script>
 <script type="text/javascript">
 require([
-	'graph/DirectedGraphLayout',
-	'graph/SvgRenderer',
-    'dojo/domReady!'
+	'dgraph/DirectedGraphLayout',
+	'dgraph/SvgRenderer',
+  'dojo/domReady!'
 ], function(DirectedGraphLayout, SvgRenderer) {
     var graph, svg,
         graphData = {
